worked on small bugs

--- a/src/components/views/navbar/navbar.css
+++ b/src/components/views/navbar/navbar.css
@@ -109,7 +109,9 @@
   color: rgb(56, 55, 55);
   font-weight: 300;
   cursor: pointer;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .chaticon2 {
